[gd_scene load_steps=3 format=4 uid="uid://b86t7px8ygdwe"]

[ext_resource type="Script" uid="uid://dhcsvum6wx5ns" path="res://Core/CommandManager/CommandManager.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bml60wmq62jay" path="res://Prefab/GUI/Button/MainButton.tscn" id="2"]

[node name="CommandManager" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
script = ExtResource("1")

[node name="GUILayer" type="CanvasLayer" parent="."]
layer = 100
visible = false

[node name="ColorRect" type="ColorRect" parent="GUILayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.466667)

[node name="CommandContainer" type="MarginContainer" parent="GUILayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="GUILayer/CommandContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="GUILayer/CommandContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Base" type="VBoxContainer" parent="GUILayer/CommandContainer/ScrollContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(240, 0)
layout_mode = 2

[node name="Label" type="Label" parent="GUILayer/CommandContainer/ScrollContainer/HBoxContainer/Base"]
layout_mode = 2
text = "基础"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GUILayer/CommandContainer/ScrollContainer/HBoxContainer/Base"]
layout_mode = 2

[node name="AnimeFrameRateLabel" type="Label" parent="GUILayer/CommandContainer/ScrollContainer/HBoxContainer/Base/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "动画帧率:24"

[node name="AnimeFrameRateSlider" type="HSlider" parent="GUILayer/CommandContainer/ScrollContainer/HBoxContainer/Base/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 24.0
max_value = 240.0
value = 24.0
rounded = true
ticks_on_borders = true

[node name="Default" type="VBoxContainer" parent="GUILayer/CommandContainer/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2

[node name="Label" type="Label" parent="GUILayer/CommandContainer/ScrollContainer/HBoxContainer/Default"]
layout_mode = 2
text = "游戏内"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OpenAllLevelCheckBox" type="CheckBox" parent="GUILayer/CommandContainer/ScrollContainer/HBoxContainer/Default"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "开启所有关卡"

[node name="CoinMaxCheckBox" type="CheckBox" parent="GUILayer/CommandContainer/ScrollContainer/HBoxContainer/Default"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "满金币"

[node name="SunMaxCheckBox" type="CheckBox" parent="GUILayer/CommandContainer/ScrollContainer/HBoxContainer/Default"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "满阳光"

[node name="PacketSelectCheckBox" type="CheckBox" parent="GUILayer/CommandContainer/ScrollContainer/HBoxContainer/Default"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "任何模式启用选卡"

[node name="PacketOpenAllCheckBox" type="CheckBox" parent="GUILayer/CommandContainer/ScrollContainer/HBoxContainer/Default"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "解锁所有卡牌"

[node name="PacketColdDownCheckBox" type="CheckBox" parent="GUILayer/CommandContainer/ScrollContainer/HBoxContainer/Default"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "卡牌无冷却"

[node name="OpenAllCustomCheckBox" type="CheckBox" parent="GUILayer/CommandContainer/ScrollContainer/HBoxContainer/Default"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text = "开启所有装扮"

[node name="TestLevelButton" parent="GUILayer" instance=ExtResource("2")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -187.0
offset_top = 36.0
offset_right = -70.0
offset_bottom = 82.0
grow_horizontal = 0
text = "测试关卡"

[node name="LoadLevelButton" parent="GUILayer" instance=ExtResource("2")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -187.0
offset_top = 99.0
offset_right = -70.0
offset_bottom = 145.0
grow_horizontal = 0
text = "读取关卡"

[node name="ButtonLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="OpenButton" parent="ButtonLayer" instance=ExtResource("2")]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -285.0
offset_top = -46.0
offset_right = -168.0
offset_bottom = 0.0
grow_horizontal = 0
grow_vertical = 0
toggle_mode = true
text = "控制台"

[connection signal="pressed" from="GUILayer/TestLevelButton" to="." method="TestLevelButtonPressed"]
[connection signal="pressed" from="GUILayer/LoadLevelButton" to="." method="LoadLevelButtonPressed"]
[connection signal="toggled" from="ButtonLayer/OpenButton" to="." method="OpenButtonToggled"]
